--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@ html,
 body {
 
     font-family: Helvetica, Arial, sans-serif;
+    display: grid;
 
 }
 
@@ -24,6 +25,14 @@ body {
     justify-content: center;
 }
 
+.list-employee {
+    display: grid;
+    place-items: center; /* Centra el contenido horizontal y verticalmente */
+    justify-self: center;
+    width: 25rem;
+    
+}
+
 .btn {
     margin: 10px;
     margin-top: 20px;
@@ -38,76 +47,116 @@ body {
 
 
 /*-----*/
-  /* Estilos para la barra de navegación */
-  nav {
-    background-color: #333; /* Color de fondo oscuro */
-    padding: 10px; /* Espacio alrededor de los enlaces */
-     
+/* Estilos para la barra de navegación */
+nav {
+    background-color: #333;
+    /* Color de fondo oscuro */
+    padding: 10px;
+    /* Espacio alrededor de los enlaces */
+
 }
 
 nav ul {
-    list-style-type: none; /* Eliminar viñetas de la lista */
+    list-style-type: none;
+    /* Eliminar viñetas de la lista */
     margin: 0;
     padding: 0;
-    display: flex; /* Alinear los enlaces en fila */
+    display: flex;
+    /* Alinear los enlaces en fila */
     justify-content: flex-end;
 }
 
 nav ul li {
-    margin-right: 20px; /* Espacio entre los elementos de la lista */
+    margin-right: 20px;
+    /* Espacio entre los elementos de la lista */
 }
 
 nav ul li a {
-    color: white; /* Color del texto */
-    text-decoration: none; /* Quitar subrayado de los enlaces */
+    color: white;
+    /* Color del texto */
+    text-decoration: none;
+    /* Quitar subrayado de los enlaces */
     font-weight: bold;
 }
 
 nav ul li a:hover {
-    text-decoration: underline; /* Subrayar al pasar el mouse */
+    text-decoration: underline;
+    /* Subrayar al pasar el mouse */
 }
 
 .container-register {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
-    grid-template-rows: repeat(2, auto); /* Tres filas automáticas */
+    grid-template-columns: repeat(2, 1fr);
+    /* Dos columnas de igual tamaño */
+    grid-template-rows: repeat(2, auto);
+    /* Tres filas automáticas */
     gap: 15px;
-    
+
 }
 
-.container-reg{
+.container-reg {
     display: flex;
-    background-color: #d6dbdf; 
+    background-color: #d6dbdf;
     padding: 18px;
     border-radius: 10px
 }
 
 #submitButton-register {
     margin-top: 23px;
-    
+
 }
 
-#container-buttton{
-    align-items: center; /* Centra verticalmente */
+#container-buttton {
+    align-items: center;
+    /* Centra verticalmente */
 }
 
-.btn-register{
+.btn-register {
     padding: 5px;
 }
 
-.juanita{
+.juanita {
     background-color: #c9f6d6;
 }
 
-.iliana{
+.iliana {
     background-color: #f6c9e9;
 }
 
-.emty{
+.emty {
     background-color: white;
 }
 
-#submitButton_register{
+#submitButton_register {
     width: 102px;
     height: 44px;
+}
+
+.items-li{
+    margin-left: 8px;
+    margin-right: 8px;
+    padding: 12px;
+    background-color: #525454;
+    color: white;
+    justify-self: center;
+    
+}
+
+p{
+    margin: 0;
+}
+
+.btn-delete{
+    margin-top: 3px;
+}
+
+h5{
+    margin-bottom: 0px;
+    padding-bottom: -20px;
+}
+
+#employeeList{
+    list-style-type: none; /* Quita los puntos de la lista */
+    padding: 0;
+    margin: 0;
 }
