--- a/static/styles.css
+++ b/static/styles.css
@@ -160,3 +160,12 @@ h5{
     padding: 0;
     margin: 0;
 }
+
+.fade-out {
+    opacity: 1;
+    transition: opacity 0.5s ease-out; /* La animación durará 0.5 segundos */
+}
+
+.fade-out.hide {
+    opacity: 0;
+}
