cambios de parametros

--- a/static/styles.css
+++ b/static/styles.css
@@ -119,6 +119,10 @@ nav ul li a:hover {
     background-color: #c9f6d6;
 }
 
+.claudia {
+    background-color: #FFDAB9;
+}
+
 .iliana {
     background-color: #f6c9e9;
 }
